--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@ body{
     margin: 0;
     box-sizing: border-box;
     color: var(--textcolor);
+    scroll-behavior: smooth;
 }
 .hero{
     width: 100%;
